--- a/Admin-Driver/src/app/driver-list/driver-list.component.html
+++ b/Admin-Driver/src/app/driver-list/driver-list.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
-    <div class="header">
-      <h1>List of Drivers</h1>
+    <div class="header"><h1>List of Drivers</h1>
+      
     </div>
     <div class="driver-list">
       <div class="driver-box" *ngFor="let driver of driver">
