--- a/Admin-Driver/src/app/Components/vehicle-list-component/vehicle-list-component.component.html
+++ b/Admin-Driver/src/app/Components/vehicle-list-component/vehicle-list-component.component.html
@@ -41,7 +41,7 @@
       <input type="text" id="vehiclePrice" [(ngModel)]="newVehicleType.vehiclePrice" placeholder="">
     </div>
     <div class="add-vehicle-button">
-      <button (click)="createVehicle()">Add Driver</button>
+      <button (click)="createVehicle()">Add Vehicle</button>
 </div>
   </div>
   
