--- a/Admin-Driver/src/app/Components/bookings-list-component/bookings-list-component.component.html
+++ b/Admin-Driver/src/app/Components/bookings-list-component/bookings-list-component.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
     <div class="header">
-      <h1>Lists of Bookings</h1>
+      <h1>Records of Bookings</h1>
     </div>
       
        <div class="booking-list-container">
