--- a/Admin-Driver/src/app/driver-list/driver-list.component.html
+++ b/Admin-Driver/src/app/driver-list/driver-list.component.html
@@ -5,7 +5,7 @@
     <div class="driver-list">
       <div class="driver-box" *ngFor="let driver of driver">
         {{ driver.employee.last_name }} {{ driver.employee.first_name }}
-      <!-- <button class="delete-button" (click)="deleteDriver(driver.id)">X</button> -->
+     <button class="delete-button" (click)="deleteDriver(driver.licence_number)">X</button>
       </div>
     </div>
     <div class="add-driver">
