--- a/Customer/src/app/Components/header/header.component.html
+++ b/Customer/src/app/Components/header/header.component.html
@@ -1,13 +1,14 @@
 <header>
     <div class="logo">
-      <img src="../assets/image/l1.png" alt="Lilz Storage" width="150%" height="100%"  />
+      <a routerLink="/">
+        <img src="../assets/image/l1.png" alt="Lilz Storage" width="150%" height="100%"  />
+      </a>
     </div>
     <nav>
       <ul>
         <li><a routerLink="/StorageUnit"><i class="fas fa-box"></i> Storage Unit</a></li>
         <li><a routerLink="/AboutUs"><i class="fas fa-info-circle"></i> About Us</a></li>
         <li><a routerLink="/ContactUs"><i class="fas fa-phone"></i> Contact Us</a></li>
-         <li><a routerLink="/view-email"><i class="fas fa-invoice"></i> Invoice</a></li>
         <li><a routerLink="/"><i class="fas fa-home"></i> Home</a></li>
       </ul>
     </nav>
