--- a/Customer/src/app/Components/storage-unit/storage-unit.component.css
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.css
@@ -1,15 +1,3 @@
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #333; /* Dark blue-gray background color */
-  color: #fff;
-  padding: 10px 20px; /* Adjust padding as needed */
-  height: 20px; /* Adjust the height as needed */
-  margin-bottom: 40px;
-}
-
 nav ul {
   list-style: none;
   display: flex;
@@ -60,47 +48,86 @@ a {
 .card-container {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; /* Allow cards to wrap to the next row on smaller screens */
-  margin: 20px;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  padding: 50px;
+  margin-top: -50px;
 }
+
+/* .card-container :hover {
+  transform: translate(-8px, -16px)
+  rotate(3deg);
+
+} */
 
 .first-card {
-  width: calc(33.33% - 20px); /* Adjust the card width */
+  width: calc(30% - 20px); 
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  overflow: hidden;
-  transition: transform 0.2s ease-in-out;
-  height: 28em;
+  /* border: 1px solid #ddd; */
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.61);
+  /* margin-bottom: 20px; */
+  /* overflow: hidden; */
+  padding: 28px;
+  /* transition: transform 0.2s ease-in-out; */
+  height: fit-content;
+  /* display: flex; */
+  flex-wrap: wrap;
+  /* background-image: linear-gradient(85deg,#0bbed6,#b0fc99); */
+  /* flex-direction: column; */
   /* margin-bottom: 100pt; */
 }
 
+
+
+/* .card-container :hover {
+  transform: translate(-8px, -16px)
+  rotate(3deg);
+
+} */
+.home {
+  /* background-image: radial-gradient(#b0fc99,#028299); */
+}
 .second-card{
-  width: calc(33.33% - 20px); /* Adjust the card width */
+  width: calc(30% - 20px); 
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  overflow: hidden;
-  transition: transform 0.2s ease-in-out;
-  height: 33em;
+  /* border: 1px solid #ddd; */
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.61);
+  /* margin-bottom: 20px; */
+  /* overflow: hidden; */
+  padding: 28px;
+  /* transition: transform 0.2s ease-in-out; */
+  height: fit-content;
+  /* display: flex; */
+  flex-wrap: wrap;
+  /* opacity: 0.6; */
+  /* background-image: radial-gradient(#b0fc99,#02434e); */
+  /* flex-direction: column; */
   /* margin-bottom: 100pt; */
 
 }
+
+/* .second-card:hover {
+  opacity: 1;
+} */
 
 .third-card{
-  width: calc(33.33% - 20px); /* Adjust the card width */
+  width: calc(30% - 20px); 
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  overflow: hidden;
-  transition: transform 0.2s ease-in-out;
-  height: 37em;
+  /* border: 1px solid #ddd; */
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.61);
+  /* margin-bottom: 20px; */
+  /* overflow: hidden; */
+  padding: 28px;
+  /* transition: transform 0.2s ease-in-out; */
+  height: fit-content;
+  /* display: flex; */
+  flex-wrap: wrap;
+  /* background-image: linear-gradient(85deg,#b0fc99,#0bbed6); */
+  /* flex-direction: column; */
+  /* margin-bottom: 100pt; */
 }
 
 .card:hover {
@@ -131,10 +158,23 @@ a {
   background-color: #333;
   color: #fff;
   border: none;
-  padding: 10px 20px;
+  padding: 20px 50px;
+  position: relative;
   border-radius: 5px;
   cursor: pointer;
+  font-size: larger;
+  font-weight: 800;
   transition: background-color 0.2s ease-in-out;
+}
+
+article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h3 {
+  border-bottom: 3px solid black;
 }
 
 .btn:hover {
@@ -150,9 +190,48 @@ strong {
   text-align: center;
   border: 3px solid black;
   width: 100%;
+  margin-top: 2em;
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.ava {
+  display: flex;
+  margin-top: 2em;
+}
 
+.card-group {
+  max-width: 1260px;
+  display: flex;
+  column-gap: 16px;
+  padding: 50px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* overflow: scroll; */
+}
+
+.card {
+  flex: 0 0 300px;
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  background-image: linear-gradient(85deg,#434343,#262626);
+  padding: 32px;
+  box-shadow: -16px 0 32px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  transition: transform 250ms;
+}
+
+.card:not(:first-child) {
+  margin-left: -130px;
+}
+
+.card:hover {
+  transform: translate(-8px, -16px)
+  rotate(3deg);
+}
+
+.card:hover ~ .card {
+  transform: translate(130px);
+}
 
 
