--- a/Customer/src/app/Components/customer-details/customer-details.component.html
+++ b/Customer/src/app/Components/customer-details/customer-details.component.html
@@ -1,47 +1,35 @@
-
-
-<div class="container">
-
- 
-    <img class=“logo” src = "https://i.imgur.com/P4iVJz0.png">
-
-  <div class="form-container">
-  
-    <h2>Personal Details</h2>
-    <form #formData="ngForm" (ngSubmit)="onSubmit()">
-      <div class="grid-container">
-     
+<div class="registration-container">
+    <div class="right-panel">
+      <h2>Registration</h2>
+      <form (ngSubmit)="onSubmit()" class="registration-form">
         <div class="form-group">
-          <label for="firstName">First Name:</label>
-          <input type="text" id="firstName" name="firstName"  required [(ngModel)]="data.firstName">
+          <label for="fullName">Full Name</label>
+          <input type="text" id="fullName" name="fullName" [(ngModel)]="fullName" required>
         </div>
         <div class="form-group">
-          <label for="surname">Surname:</label>
-          <input type="text" id="surname" name="surname" required [(ngModel)]="data.surname"> 
-        </div>
-        <div class="form-group">
-          <label for="cellphone">Cellphone:</label>
-          <input type="tel" id="cellphone" name="cellphone" required [(ngModel)]="data.cellphone">
-        </div>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required [(ngModel)]="data.email">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" [(ngModel)]="email"  required>
         </div>
         
-
-        <div class="form-group full-width">
-          <button type="submit" (click)="onSubmit">Submit</button>
+        <div class="form-group">
+          <label for="cellphone">Cellphone No</label>
+          <input type="phone" id="cellphone" name="cellphone" [(ngModel)]="cellphone" required>
         </div>
-      </div>
-    </form>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" [(ngModel)]="password"  required>
+        </div>
+        <div class="form-group">
+          <label for="repeatPassword">Repeat Password</label>
+          <input type="password" id="repeatPassword" name="repeatPassword" [(ngModel)]="repeatPassword"  required>
+        </div>
+        <div class="form-group">
+          <input type="checkbox" id="agreeToTerms" name="agreeToTerms"  [(ngModel)]="agreeToTerms"  required>
+          <label for="agreeToTerms">I agree to the terms of use</label>
+        </div>
+        <button type="submit" onclick="onsubmit">Sign Up</button>
+      </form>
+      <p>Already have an account? <a routerLink="/signin">Sign In</a></p>
+    </div>
+  </div>
   
-
-  
-</div>
-<footer>
-
-  <p>&copy; 2023 Lilyz Storage<p>
-</footer>
-</div>
-
-
