--- a/Customer/src/app/Components/customer-details/customer-details.component.html
+++ b/Customer/src/app/Components/customer-details/customer-details.component.html
@@ -29,7 +29,7 @@
         </div>
         <button type="submit" onclick="onsubmit">Sign Up</button>
       </form>
-      <p>Already have an account? <a routerLink="/signin">Sign In</a></p>
+      <p>Already have an account? <a routerLink="/customerLogin">Sign In</a></p>
     </div>
   </div>
   
