--- a/Customer/src/app/customer-login/customer-login.component.html
+++ b/Customer/src/app/customer-login/customer-login.component.html
@@ -14,10 +14,10 @@
         <button type="submit" (click)="login()">Login</button>
       </form>
       <div class="form-group">
-        <a href="#" class="forgot-password-link" routerLink="/forgotPassword">Forgot Password?</a>
+        <a href="#" class="forgot-password-link" routerLink="/resetPassword">Forgot Password?</a>
       </div>
       <div class="signup-link">
-        Don't have an account? <a routerLink="/signin">Sign Up</a>
+        Don't have an account? <a routerLink="/customerDetails">Sign Up</a>
       </div>
     </div>
   </div>
