--- a/Customer/src/app/Admin-Driver-Components/vehicle-list-component/vehicle-list-component.component.html
+++ b/Customer/src/app/Admin-Driver-Components/vehicle-list-component/vehicle-list-component.component.html
@@ -1,8 +1,10 @@
 <app-navbar></app-navbar>
 <div class="page-container">
-   
-    <div class="vehicle-list-container">
+    <div class="header">
       <h3>Vehicle List</h3>
+    </div>
+  
+    <div class="vehicle-list-container">
       <div class="vehicle-box" *ngFor="let vehicle of vehicle">
         {{ vehicle.vehicleMake}} {{vehicle.vehicleType.vehicleDescription}} {{vehicle.vehicleName}}
         <!-- <button (click)="deleteVehicle(vehicle)" class="delete-button">X</button> -->
@@ -10,7 +12,6 @@
     </div>
     
     <div class="form-container">
-      <h3>Add New Vehicle</h3>
       <div class="label-and-input">
         <label for="vehicleMake">Make:</label>
         <input type="text" id="vehicleMake" [(ngModel)]="newVehicle.vehicleMake" placeholder="">
@@ -39,7 +40,7 @@
         <label for="vehiclePrice">Price:</label>
         <input type="text" id="vehiclePrice" [(ngModel)]="newVehicleType.vehiclePrice" placeholder="">
       </div>
-      
-        <button class="add-vehicle-button" (click)="createVehicle()">Add Vehicle</button>
-
+      <div class="add-vehicle-button">
+        <button (click)="createVehicle()">Add Vehicle</button>
+  </div>
     </div>
