--- a/Customer/src/app/Admin-Driver-Components/bookings-list-component/bookings-list-component.component.css
+++ b/Customer/src/app/Admin-Driver-Components/bookings-list-component/bookings-list-component.component.css
@@ -1,5 +1,5 @@
 .page-container {
-  background-color: lightblue;
+  background-color: rgb(228, 235, 238);
   padding: 20px;
   display: flex;
   flex-direction: column;
