--- a/Customer/src/app/Admin-Driver-Components/vehicle-list-component/vehicle-list-component.component.css
+++ b/Customer/src/app/Admin-Driver-Components/vehicle-list-component/vehicle-list-component.component.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
+  background-color: rgb(228, 235, 238);
   font-family: Arial, sans-serif;
 }
 h3 {
