--- a/Customer/src/app/Components/booking/booking.component.html
+++ b/Customer/src/app/Components/booking/booking.component.html
@@ -13,7 +13,7 @@
     <div class="Dates">
       <div id="BookingDate">
         <label>Booking Date:</label>
-        <input
+        <input class="bookingDateInput"
           name="bookingDate"
           placeholder="Booking Date"
           [(ngModel)]="currentDate"
