--- a/Customer/src/app/Components/customer-details/customer-details.component.css
+++ b/Customer/src/app/Components/customer-details/customer-details.component.css
@@ -48,3 +48,8 @@ button[type="submit"] {
   cursor: pointer;
 }
 
+.disabled-button:hover {
+  background-color: #ccc; 
+  cursor: not-allowed; 
+}
+
