--- a/Customer/src/app/Components/about-us/about-us.component.css
+++ b/Customer/src/app/Components/about-us/about-us.component.css
@@ -1,5 +1,5 @@
 .about-us {
-  background-color: #f9f9f9;
+  background-color: #f9f9f99f;
   padding: 80px 0;
   text-align: center;
 }
@@ -36,6 +36,7 @@ nav img{
   perspective: 1000px;
   width: 100%;
   height: 300px;
+ 
 }
 
 .card-inner {
@@ -56,6 +57,7 @@ nav img{
   height: 100%;
   position: absolute;
   backface-visibility: hidden;
+  border-radius: 50%;
 }
 
 .card-front {
@@ -96,13 +98,13 @@ footer{
 }
 
  nav {
-  background-color: #333; /* Background color for the navigation bar */
+  background-color: #333;
   padding: 10px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000; /* Ensure it's on top of other content */
+  z-index: 1000; 
   text-align: center;
   
 }
@@ -111,24 +113,27 @@ footer{
   list-style-type: none;
   margin: 0;
   padding: 0;
-  text-align: center; /* Center align navigation items */
+  text-align: center; 
   text-align: right;
   
 }
 
  nav li {
   display: inline;
-  margin-right: 30px; /* Spacing between navigation items */
+  margin-right: 30px;
 }
 
  nav a {
   text-decoration: none;
-  color: #fff; /* Text color for navigation links */
+  color: #fff; 
   font-weight: bold;
   
 }
 
  nav a:hover {
-  color: #ff6600; /* Text color for navigation links on hover */
+  color: #ff6600; 
 }
+
+
+
 
