--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-  
+
     <app-header></app-header>
 
   <div class="storage-text" style="margin-top: 20px">
@@ -20,7 +20,7 @@
         <!-- Increase max-height -->
         <h3>Small Storage Unit</h3>
         <p>
-          <strong>Description: These are small units we offer, on the picture is the biggest on the small units</strong>
+          <strong>Description: These are the smallest units we offer; the picture shows the largest among them</strong>
         </p>
         <p></p>
         <p><strong> Price: R 1500.00 - R 3000.00</strong></p>
@@ -33,8 +33,8 @@
       <div class="card-content">
         <img src="../assets/images/stora2.jpg" alt="Card Image 3" style="width: 100%; height: 280px; border-radius: 2%;"/>
         <h3>Medium Storage Unit</h3>
-        <p><strong>Description: These are Medium units we offer, on the picture is the biggest on the Medium units</strong> </p> 
-         <p>   
+        <p><strong>Description: These are medium-sized units we offer; the picture depicts the largest one among the medium-sized units.</strong> </p>
+         <p>
          </p>
         <p><strong> R 1500.00 - R 3000.00</strong> </p>
         <p> <Strong> Size: 1 m2 upto 9 m2</Strong></p>
@@ -47,7 +47,7 @@
   <div class="card-content">
     <img src="../assets/images/stora3.jpg" alt="Card Image 3" style="width: 100%; height: 350px;border-radius: 2%;"/>
     <h3>Large Storage Unit</h3>
-    <p><strong>Description: These are Large units we offer, on the picture is the biggest on the Large units</strong> </p>
+    <p><strong>Description: These are the large units we offer, and the picture shows the largest one among the large units.</strong> </p>
     <p>  </p>
     <p><strong> R 1500.00 - R 3000.00</strong> </p>
         <p> <Strong> Size: 1 m2 upto 9 m2</Strong></p>
