--- a/Customer/src/app/Components/storage-unit/storage-unit.component.css
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.css
@@ -3,10 +3,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333; /* Dark blue-gray background color */
-  color: #fff;
-  padding: 10px 20px; /* Adjust padding as needed */
-  height: 20px; /* Adjust the height as needed */
+  background-color: #333;
+  padding: 10px 20px;
+  height: 20px; 
   margin-bottom: 40px;
 }
 
