--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -18,8 +18,8 @@
         >
       </p>
       <p></p>
-      <p><strong> Price: R 1500.00 - R 3000.00</strong></p>
-      <p><strong> Size: 1 m2 upto 9 m2</strong></p>
+      <p><strong> Price: R 800.00 - R 1500.00</strong></p>
+      <p><strong> Size: 1 m<sup>2</sup> upto 9 m<sup>2</sup></strong></p>
       <button class="btn" (click)="fetchRooms()">Book</button>
     </article>
     <article class="first-card">
@@ -36,8 +36,8 @@
         >
       </p>
       <p></p>
-      <p><strong> R 1500.00 - R 3000.00</strong></p>
-      <p><Strong> Size: 1 m2 upto 9 m2</Strong></p>
+      <p><strong> R 1600.00 - R 2500.00</strong></p>
+      <p><Strong> Size: 12 m<sup>2</sup> upto 21 m<sup>2</sup></Strong></p>
       <button class="btn" (click)="fetchMRooms()">Book</button>
     </article>
     <article class="first-card">
@@ -54,53 +54,10 @@
         >
       </p>
       <p></p>
-      <p><strong> R 1500.00 - R 3000.00</strong></p>
-      <p><Strong> Size: 1 m2 upto 9 m2</Strong></p>
+      <p><strong> R 2600.00 - R 3200.00</strong></p>
+      <p><Strong> Size: 24 m<sup>2</sup> upto 36 m<sup>2</sup></Strong></p>
       <button type="button" class="btn" (click)="fetchLRooms()">Book</button>
     </article>
-    <!-- Second Card -->
-    <!-- <div class="second-card">
-    <div class="card-content">
-      <img
-        src="../assets/images/stora2.jpg"
-        alt="Card Image 3"
-        style="width: 100%; height: 240px; border-radius: 2%"
-      />
-      <h3>Medium Storage Unit</h3>
-      <p>
-        <strong
-          >Description: These are Medium units we offer, on the picture is the
-          biggest on the Medium units</strong
-        >
-      </p>
-      <p></p>
-      <p><strong> R 1500.00 - R 3000.00</strong></p>
-      <p><Strong> Size: 1 m2 upto 9 m2</Strong></p>
-      <button class="btn" (click)="fetchMRooms()">Book</button>
-    </div>
-   </div> -->
-
-    <!-- Third Card -->
-    <!-- <div class="third-card">
-      <div class="card-content">
-        <img
-          src="../assets/images/stora3.jpg"
-          alt="Card Image 3"
-          style="width: 100%; height: 240px; border-radius: 2%"
-        />
-        <h3>Large Storage Unit</h3>
-        <p>
-          <strong
-            >Description: These are Large units we offer, on the picture is the
-            biggest on the Large units</strong
-          >
-        </p>
-        <p></p>
-        <p><strong> R 1500.00 - R 3000.00</strong></p>
-        <p><Strong> Size: 1 m2 upto 9 m2</Strong></p>
-        <button type="button" class="btn" (click)="fetchLRooms()">Book</button>
-      </div>
-    </div> -->
     <div class="head">
       <h2>Available Storage Units</h2>
     </div>
