--- a/Customer/src/app/Components/booking/booking.component.html
+++ b/Customer/src/app/Components/booking/booking.component.html
@@ -3,10 +3,10 @@
     <h2>Booking Form</h2>
     <div class="StorageUnits">  
       <span>Unit Size Description: {{ unitSizeDescription }}</span>  
-      <span>Unit Size: {{ unitSize }} m2</span>
-      <span>Width: {{ width }} m2</span>
-      <span>Length: {{ length }} m2</span>
-      <span>Height: {{ height }} m2</span>
+      <span>Unit Size: {{ unitSize }} m<sup>2</sup></span>
+      <span>Width: {{ width }} m<sup>2</sup></span>
+      <span>Length: {{ length }} m<sup>2</sup></span>
+      <span>Height: {{ height }} m<sup>2</sup></span>
       <span>Price: R {{ price }}</span>
   </div>
 
