--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -2,26 +2,27 @@
   <app-header></app-header>
   <h2>Explore Our Unit Options</h2>
   <div class="card-container">
-    <!-- First Card -->
+    
     <article class="first-card">
       <img
         src="../assets/images/stora.jpg"
         alt="Card Image 3"
         style="width: 100%; height: 280px; border-radius: 2%"
       />
-      <!-- Increase max-height -->
       <h3>Small Storage Unit</h3>
       <p>
         <strong
           >Description: These are small units we offer, on the picture is the
-          biggest on the small units</strong
-        >
+          biggest on the small units
+          <br><br>
+          Price: R 800.00 - R 1500.00
+          <br><br>
+          Size: 1 m<sup>2</sup> upto 9 m<sup>2</sup>
+          </strong>
       </p>
-      <p></p>
-      <p><strong> Price: R 800.00 - R 1500.00</strong></p>
-      <p><strong> Size: 1 m<sup>2</sup> upto 9 m<sup>2</sup></strong></p>
       <button class="btn" (click)="fetchRooms()">Book</button>
     </article>
+
     <article class="first-card">
       <img
         src="../assets/images/stora2.jpg"
@@ -32,14 +33,15 @@
       <p>
         <strong
           >Description: These are Medium units we offer, on the picture is the
-          biggest on the Medium units</strong
-        >
+          biggest on the Medium units <br><br>
+        Price: R 1600.00 - R 2500.00
+        <br><br>
+        Size: 12 m<sup>2</sup> upto 21 m<sup>2</sup>
+      </strong>
       </p>
-      <p></p>
-      <p><strong> R 1600.00 - R 2500.00</strong></p>
-      <p><Strong> Size: 12 m<sup>2</sup> upto 21 m<sup>2</sup></Strong></p>
       <button class="btn" (click)="fetchMRooms()">Book</button>
     </article>
+
     <article class="first-card">
       <img
         src="../assets/images/stora3.jpg"
@@ -50,14 +52,16 @@
       <p>
         <strong
           >Description: These are Large units we offer, on the picture is the
-          biggest on the Large units</strong
-        >
+          biggest on the Large units
+          <br><br>
+          Price: R 2600.00 - R 3200.00
+          <br><br>
+          Size: 24 m<sup>2</sup> upto 36 m<sup>2</sup>
+        </strong>
       </p>
-      <p></p>
-      <p><strong> R 2600.00 - R 3200.00</strong></p>
-      <p><Strong> Size: 24 m<sup>2</sup> upto 36 m<sup>2</sup></Strong></p>
       <button type="button" class="btn" (click)="fetchLRooms()">Book</button>
     </article>
+
     <div class="head">
       <h2>Available Storage Units</h2>
     </div>
