--- a/Customer/src/app/Admin-Driver-Components/driver-home/driver-home.component.css
+++ b/Customer/src/app/Admin-Driver-Components/driver-home/driver-home.component.css
@@ -12,7 +12,7 @@
     list-style:none;
     padding: 0;
     width: 15em;
-    display: flex;
+    display: inline-flex;
   }
 
   h2 {
@@ -27,6 +27,6 @@
     display: flex;
     grid-template-columns: repeat(2, 1fr); 
     grid-gap: 1em;
-    justify-content: center;
+    justify-content: flex-start;
     width: 450px; 
   }
