--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -12,8 +12,7 @@
       <h3>Small Storage Unit</h3>
       <p>
         <strong
-          >Description: These are small units we offer, on the picture is the
-          biggest on the small units
+          >Description: These are the smallest units we offer; the picture shows the largest among them
           <br><br>
           Price: R 800.00 - R 1500.00
           <br><br>
@@ -32,8 +31,7 @@
       <h3>Medium Storage Unit</h3>
       <p>
         <strong
-          >Description: These are Medium units we offer, on the picture is the
-          biggest on the Medium units <br><br>
+          >Description: These are medium-sized units we offer; the picture depicts the largest one among the medium-sized units<br><br>
         Price: R 1600.00 - R 2500.00
         <br><br>
         Size: 12 m<sup>2</sup> upto 21 m<sup>2</sup>
@@ -51,8 +49,7 @@
       <h3>Large Storage Unit</h3>
       <p>
         <strong
-          >Description: These are Large units we offer, on the picture is the
-          biggest on the Large units
+          >Description: These are the large units we offer, and the picture shows the largest one among the large units
           <br><br>
           Price: R 2600.00 - R 3200.00
           <br><br>
