--- a/Customer/src/app/Components/header/header.component.html
+++ b/Customer/src/app/Components/header/header.component.html
@@ -1,15 +1,28 @@
 <header>
-    <div class="logo">
-      <a routerLink="/">
-        <img src="../assets/image/l1.png" alt="Lilz Storage" width="150%" height="100%"  />
-      </a>
-    </div>
-    <nav>
-      <ul>
-        <li><a routerLink="/"><i class="fas fa-home"></i> Home</a></li>
-        <li><a routerLink="/StorageUnit"><i class="fas fa-box"></i> Storage Unit</a></li>
-        <li><a routerLink="/ContactUs"><i class="fas fa-phone"></i> Contact Us</a></li>
-        <li><a routerLink="/AboutUs"><i class="fas fa-info-circle"></i> About Us</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="logo">
+    <a routerLink="/">
+      <img
+        src="../assets/image/l1.png"
+        alt="Lilz Storage"
+        width="150%"
+        height="100%"
+      />
+    </a>
+  </div>
+  <nav>
+    <ul>
+      <li routerLink="/">
+        <a><i class="fas fa-home"></i> Home</a>
+      </li>
+      <li routerLink="/StorageUnit">
+        <a><i class="fas fa-box"></i> Storage Unit</a>
+      </li>
+      <li routerLink="/ContactUs">
+        <a><i class="fas fa-phone"></i> Contact Us</a>
+      </li>
+      <li routerLink="/AboutUs">
+        <a><i class="fas fa-info-circle"></i> About Us</a>
+      </li>
+    </ul>
+  </nav>
+</header>
